--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my *first socket.io app",
+  "version": "1.0.1",
+  "description": "my first socket.io app",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "*",
     "socket.io": "*",
